plugins {
	id 'org.springframework.boot' version '2.2.6.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
	id 'eclipse'
	id 'jacoco'
}

group = 'com.tactfactory.monprojetsb'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	runtimeOnly 'mysql:mysql-connector-java'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		// exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation("com.h2database:h2:1.4.197")  // (H2) pour BDD en RAM 
}

test {
  useJUnitPlatform()
  ignoreFailures = true
  reports {
    junitXml.enabled = false
    html.enabled = true
  }
}
